Fix theme preview timestamp color. Change board name letter spacing.

--- a/style.css
+++ b/style.css
@@ -1166,7 +1166,7 @@ td.doubledash
 	font-size:28px!important;
 	font-weight:700!important;
 	height:36px;
-	letter-spacing:-1px;
+	letter-spacing:-3px;
 	padding:0 10px;
 	position:absolute;
 	text-align:center;
